Fixes tagsinput bad alignment

--- a/web-ui/src/main/resources/catalog/style/gn_search_geocat.less
+++ b/web-ui/src/main/resources/catalog/style/gn_search_geocat.less
@@ -221,6 +221,11 @@ h1, h2, h3, h4, h5, h6,
       font-size: 12px;
       font-weight: normal;
       margin: 2px;
+      padding: .4em .6em .2em;
+      [data-role=remove] {
+        position: relative;
+        top: -2px;
+      }
     }
   }
   .geotype {
